# ChessBitBoards

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  engineWrapper.py  lichessBot.py  play.py  requirements.txt
app/: CMakeLists.txt  main.cpp
app/include/: getUserMove.h
core/: CMakeLists.txt
core/include/: bitBoard.h  boardVisualizer.h  chess.h  core.h  engine.h  eval.h  evalTables.h  masks.h  math_utils.h  moveConstants.h  moveOrdering.h  repetitionTable.h  search.h  timeman.h  transposition.h  types.h  zobristHash.h
core/source/: bench.cpp  bitBoardHelpers.cpp  boardHelpers.cpp  boardVisualizer.cpp  chessBoard.cpp  chessMoveGen.cpp  core.cpp  eval.cpp  fen.cpp  hashBoard.cpp  initBoard.cpp  initEval.cpp  makeMove.cpp  math_utils.cpp  moveConstants.h  moveOrder.cpp  runEngineCmd.cpp  search.cpp
docs/: Optimization.md  engineCommands.md  engineImprovements.md  optimizationProgress.py
testing/: CMakeLists.txt  benchEngineSearch.cpp  benchPyChess.py  benchmarkMoveGen.cpp  eloEstimation.py  enginePlayout.py  extractFens.py  testMask.cpp  testMopUp.py  testZobrist.cpp  verifyLegalMoves.cpp
testing/data/: engineComparison.json  fens.txt  fens10.txt  fens10000.txt  openingFens.txt  openingFens100.txt
tools/: CMakeLists.txt  README.md  bitScanBench.cpp  genZobristKeys.cpp  magicBitBoards.cpp  moveArrayGen.cpp
tools/common/: CMakeLists.txt  engine.cpp  stockfish.h  toolUtils.cpp  toolUtils.h
